# ComfyUI-llama_Dapao

./: AGENTS.md  CLAUDE.md  README.md  __init__.py  batch_prompt_node.py  caption_node.py  caption_options.py  cqdm.py  gguf_layers.py  nodes.py  pyproject.toml  requirements.txt
example_workflows/: 🐰Gemma4开源 ComfyUI本地节点调用全攻略使用指南26-04-15.json
prompt/: 提示词风格 - JSON.txt  提示词风格 - 标签.txt  提示词风格 - 电影质感.txt  提示词风格 - 简单.txt  提示词风格 - 详细.txt  提示词风格-12维度极致强化.txt
